--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ai-sdk/google": "^0.0.51",
+    "@aws-sdk/client-s3": "^3.750.0",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -32,7 +33,6 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-tailwindcss": "^3.17.5",
     "framer-motion": "^11.3.19",
-    "aws-sdk": "^2.1692.0",
     "geist": "^1.3.1",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
