--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vercel/blob": "^0.24.1",
     "@vercel/postgres": "^0.10.0",
     "ai": "3.4.9",
+    "axios": "^1.8.1",
     "bcrypt-ts": "^5.0.2",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
