--- a/package.json
+++ b/package.json
@@ -68,5 +68,17 @@
     "tailwindcss": "^3.4.1",
     "tsx": "^4.19.1",
     "typescript": "^5"
+  },
+  "pnpm": {
+    "ignoredBuiltDependencies": [
+      "bufferutil",
+      "esbuild",
+      "sharp"
+    ],
+    "onlyBuiltDependencies": [
+      "bufferutil",
+      "esbuild",
+      "sharp"
+    ]
   }
 }
