--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jamaa-ai-chatbot",
+  "name": "ucc-ai-helpdesk",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -41,6 +41,8 @@
     "next": "15.0.0-canary.152",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.3.0",
+    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^5.1.91",
     "postgres": "^3.4.5",
     "react": "19.0.0-rc-7771d3a7-20240827",
     "react-dom": "19.0.0-rc-7771d3a7-20240827",
